added [item] display on chat (still at WIP)